--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "firebase": "^9.6.10",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.0.3",
     "react-router-dom": "6",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
